--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,16 +1,16 @@
 configurations {
-    spi
+    spi // If needed, configure this configuration further
 }
 
 dependencies {
-    compile project(':shared')
-    compile module("commons-lang:commons-lang:2.4") {
-        dependency("commons-io:commons-io:1.2")
-    }
-    compile group: 'org.apache.wicket', name: 'wicket', version: '1.3.7'
-    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.0'
-
+    implementation project(':shared')
+    implementation 'commons-lang:commons-lang:2.4'
+    implementation 'commons-io:commons-io:1.2'
+    implementation 'org.apache.wicket:wicket:1.3.7'
+    implementation 'commons-httpclient:commons-httpclient:3.0'
 }
 
 // Just a smoke test that using this option does not lead to any exception
-compileJava.options.compilerArgs = ['-Xlint:unchecked']
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+}
