--- a/services/webservice/build.gradle
+++ b/services/webservice/build.gradle
@@ -1,9 +1,14 @@
-apply plugin: 'war'
+plugins {
+    id 'war'
+}
 
 dependencies {
-    compile project(':shared'), 'commons-collections:commons-collections:3.2@jar', 'commons-io:commons-io:1.2', 'commons-lang:commons-lang:2.4@jar'
-    compile group: 'org.apache.wicket', name: 'wicket', version: '1.3.7'
-    compile group: 'org.apache.struts', name: 'struts2-core', version: '2.3.14'
-    compile group: 'junit', name: 'junit', version: '4.11'
-    compile project(':api')
+    implementation project(':shared')
+    implementation 'commons-collections:commons-collections:3.2'
+    implementation 'commons-io:commons-io:1.2'
+    implementation 'commons-lang:commons-lang:2.4'
+    implementation 'org.apache.wicket:wicket:1.3.7'
+    implementation 'org.apache.struts:struts2-core:2.3.14'
+    implementation 'junit:junit:4.11'
+    implementation project(':api')
 }
